# tk_sdk_demo

./: .gitattributes  .gitignore  build.sh  readme.md  readme_bak.md  test_gpu.py  test_ik_service.py  tf2_setup.sh  yolo_env_setup.md
lib/: apt_mirror_utils.sh
src/: lite_verify.md  rl_control_sdk_verify.md  sdk_verify.md
src/grab_demo/: env_install.sh  env_uninstall.sh  libnccl2_2.22.3-1+cuda12.6_arm64.txt  package.xml  readme.md  ros2-tsinghua.sources  setup.cfg  setup.py  torch-2.7.0-cp310-cp310-linux_aarch64.txt  yolov8n.txt
src/grab_demo/grab_demo/: arm_control_mixin.py  grasp_executor_node.py  grasp_prepare_pose_node.py  hand_control_mixin.py  ik_client_node.py  pose_node.py  pose_verification_mixin.py  test_ik_client.py  test_pose_publisher.py  yolo_detect_node.py  yolo_grab_node.py
src/grab_demo_msgs/: CMakeLists.txt  README.md  package.xml
src/grab_demo_msgs/msg/: GraspCandidate.msg  IKRequest.msg
src/moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit2_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  tiangong2pro_urdf_with_hands.ros2_control.xacro  (+2 more)
src/sdk_demo/: package.xml  setup.cfg  setup.py
vnc/: install_vnc.sh  myvnc.sh  prepend_path.sh  readme.md  sources.list.arm64  sources.list.x86_64  start.sh  start_turbovnc.sh  start_with_xvfb.sh  start_with_xvfb_x86.sh  stop_with_xvfb.sh  stop_with_xvfb_old_orin.sh  test.sh  uninstall_vnc.sh  vnc_manager.sh  xstartup
vnc/pkg/: README.md  virtualgl_3.1.4_arm64.deb
vnc/vgl_wrappers/: ros2  run  rviz2
yolo_models/: yolov8n.txt
(+56 files in other folders)
